public/css/main.css
@font-face {
    font-family: 'ProximaNova-thin';
    src: url('/font/Proxima Nova Thin.otf');
}
@font-face {
    font-family: 'ProximaNova-reg';
    src: url('/font/ProximaNova-Regular.otf')
}

body {
    font-family: 'ProximaNova-reg';
}

body p{

}
body h1 {
    font-family: 'ProximaNova-thin';
    font-size: 72px;
    color: #024c64;
}
body h2 {
    font-size: 42px;
    color: #024c64;

}

body h3{
    background-color: #ffffff;
    font-size: 24px;
    padding: 0 auto;
}

.forescout-btn {
    font-size: 32px;
    border-radius: 0px;
    border-style: solid;
    border-color: #ffffff;
    border-width: 0.2px;
    margin-right: auto;
    margin-left: auto;
    width: 230px;
}

.no_padding {
    padding-left: 0px;
    padding-right: 0px;
}

.check_box {
    display: flex;
    color: #333333;
    font-size: 24px;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-right: 0px;
    padding: 0px;
    border-style: solid;
    border-color: #959595;
    border-width: 1px;
    background-color: #ffffff;
}

.check_box p{
    float: left;
    display: block;
    margin-top: 13px;
}


.check_box img {
    float: left;
    display: block;
    margin-bottom: 0px;
}

.check_box span {
    display: table-cell;
    margin-top: 20px;
    vertical-align: middle;

}

.check_box_image {
    display: table-cell;
    vertical-align: middle;
}

.job_func_check_box_image {
    display: table-cell;
    vertical-align: middle;
}

.input_check {
    opacity: 0;
    width: 0px;
}

.name_input_field input {
    border-style: solid;
    border-width: 1px;
    border-color: #959595;
}


.select_container img{
    position: absolute;
    display: block;
    right: 10px;
    top: 20px;
}

.select_container::after {
    content: " ";
    pointer-events: none;
    position: absolute;
    top: 50%;
    right: 0px;
    background-repeat: no-repeat;
    background-image: url('/work/forescout_arrowdown.png');
    width: 50px;
    height: 20px;
    margin-top: -9px;
}

select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    background-color: #ffffff;
    font-size: 24px;
    height: 60px;
}

.select_input::after {
    content: " "
}

select:after {
    content: " ";
}

.check_box_end {
    color: #333333;
    font-size: 24px;
    margin-left: -10px;
    margin-right: 0px;
    padding: 0px;
}

.check_box_end img {
    float: left;
    display: block;
    padding-top: 8px;

}

.check_box_end p {
    margin: 0px;
}

.box {
    width: 20px;
    height: 20px;
    border-style: solid;
    border-width: 1px;
    border-color: black;
}


.back_white {
    background-color: #ffffff;
}
.thin-font {
    font-family: ProximaNova-thin;
}
.reg-font {
    font-family: ProximaNova-reg;
}

.h668 {
    height: 100%;
}

.slide {
    height: 100%;
    overflow-y: auto;
}

#nine {
    overflow: auto;
    padding: 0 8px 0 20px;
}

#slideshow {
    transition: .25s linear;
}

.button_container {
    margin-top: 40px;
}


.w3-animate-top{
    position:relative;
    -webkit-animation:animatetop 0.4s;
    animation:animatetop 0.4s
}
.w3-animate-bottom{
    position:relative;
    -webkit-animation:animatebottom 0.4s;
    animation:animatebottom 0.4s
}

